# taype

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  bench.sh  oopsla24.md  pldi23.md  taype.cabal
.github/workflows/: ci.yml
app/: Main.hs  Runner.hs  Shake.hs
examples/: .ocamlformat  dune-project  figs.ipynb  tutorial.tp
examples/calculator/: calculator.tp  calculator_helper.ml  dune  test_calculator.input.csv  test_calculator.ml
examples/coil/: coil.tp  coil_helper.ml  dune  runcoil  test_assoc_lookup_offline.ml  test_assoc_lookup_online.ml  test_dtree_offline.ml  test_dtree_online.ml  test_elem_offline.ml  test_elem_online.ml  test_filter_offline.ml  test_filter_online.ml  test_linear_oram_offline.ml  test_linear_oram_online.ml  test_log_oram_offline.ml  test_log_oram_online.ml  test_map_as_filter_offline.ml  test_map_as_filter_online.ml  test_merge_offline.ml  test_merge_online.ml  test_sp_offline.ml  test_sp_online.ml
examples/common/: common.ml  common.mli  driver.ml  dune  test  test.ml
examples/dating/: dating.tp  dating_helper.ml  dune  test_dating.input.csv  test_dating.ml
examples/dtree/: dtree.tp  dtree_helper.ml  dune  test_dtree.input.csv  test_dtree.ml  test_dtree_all.input.csv  test_dtree_all.ml  test_dtree_height.input.csv  test_dtree_height.ml  test_dtree_max.alice.input  test_dtree_max.bob.input  test_dtree_max.ml  test_dtree_spine.alice.input  test_dtree_spine.bob.input  test_dtree_spine.input.csv  test_dtree_spine.ml  test_dtree_spineF.input.csv  test_dtree_spineF.ml
examples/kmean/: dune  kmean.tp  kmean_helper.ml  test_kmean.input.csv  test_kmean.ml
examples/kmeans/: dune  kmeans.tp  kmeans_helper.ml  test_kmeans.input.csv  test_kmeans.ml
examples/list/: dune  list.tp  list_helper.ml  test_append.ml  test_concat_map.input.csv  test_concat_map.ml  test_dot_prod.input.csv  test_dot_prod.ml  test_elem.input.csv  test_elem.ml  test_filter.input.csv  test_filter.ml  test_hamming_distance.input.csv  test_hamming_distance.ml  test_insert.input.csv  test_insert.ml  test_insert_list.input.csv  test_insert_list.ml  test_lookup.ml  test_map.input.csv  test_map.ml  test_min_euclidean_distance.input.csv  test_min_euclidean_distance.ml  test_nth.ml  test_partition.input.csv  test_partition.ml  test_span.input.csv  test_span.ml  test_take.input.csv  test_take.ml
examples/list-memo/: dune  list.tp  list_helper.ml  test_append.input.csv  test_append.ml  test_concat_map.ml  test_dot_prod.input.csv  test_dot_prod.ml  test_elem.ml  test_filter.input.csv  test_filter.ml  test_hamming_distance.input.csv  test_hamming_distance.ml  test_insert.input.csv  test_insert.ml  test_insert_list.ml  test_map.input.csv  test_map.ml  test_min_euclidean_distance.ml  test_nth.input.csv  test_nth.ml  test_partition.input.csv  test_partition.ml  test_span.ml  test_take.ml
examples/memo/: dune  memo.tp  memo_helper.ml  test_elem.input.csv  test_elem.ml  test_map.input.csv  test_map.ml
examples/millionaire/: dune  test_millionaire.ml
examples/misc/: dune  misc.tp  misc_helper.ml  test_millionaire.input.csv  test_millionaire.ml  test_voting1.input.csv  test_voting1.ml  test_voting2.input.csv  test_voting2.ml
examples/record/: dune  record.tp  record_helper.ml  test_bmi_mse.input.csv  test_bmi_mse.ml  test_db_analytics.input.csv  test_db_analytics.ml  test_dtree.input.csv  test_dtree.ml  test_healthy_rate.input.csv  test_healthy_rate.ml  test_is_obese_by_id.input.csv  test_is_obese_by_id.ml  test_is_taller.input.csv  test_is_taller.ml  test_min_euclidean_distance.input.csv  test_min_euclidean_distance.ml
examples/scratch/: dune  scratch.tp  scratch_helper.ml  test_coil.ml  test_elem.input.csv  test_elem.ml  test_filter.ml  test_insert.input.csv  test_insert.ml  test_insert_list.input.csv  test_insert_list.ml  test_map.ml
examples/stress-solver/: list.tp
examples/tree/: dune  test_bind.ml  test_collect.input.csv  test_collect.ml  test_elem.input.csv  test_elem.ml  test_filter.input.csv  test_filter.ml  test_insert.input.csv  test_insert.ml  test_lookup.input.csv  test_lookup.ml  test_map.input.csv  test_map.ml  test_node.input.csv  test_node.ml  test_path.input.csv  test_path.ml  test_prob.input.csv  test_prob.ml  test_swap.input.csv  test_swap.ml  tree.tp  tree_helper.ml
examples/tree-memo/: dune  test_bind.input.csv  test_bind.ml  test_collect.ml  test_elem.ml  test_filter.ml  test_insert.input.csv  test_insert.ml  test_map.ml  test_path.input.csv  test_path.ml  test_prob.input.csv  test_prob.ml  test_swap.ml  tree.tp  tree_helper.ml
examples/tutorial/: dune  test.alice.input  test.bob.input  test.input  test_elem.bob.input  test_elem.input  test_elem.input.csv  test_elem.ml  test_filter.ml  test_insert.ml  test_lookup.ml  tutorial.tp  tutorial_helper.ml
solver/: .ocamlformat
solver/lib/: dune  solver.ml
src/: Taype.hs
src/Data/Integer/: SAT.hs
src/Oil/: Optimization.hs  Syntax.hs  ToOCaml.hs  Translation.hs
src/Taype/: Binder.hs  Common.hs  Cute.hs  Environment.hs  Error.hs  Fresh.hs  Lexer.hs  Lift.hs  Name.hs  NonEmpty.hs  Parser.hs  Plate.hs  Prelude.hs  Pretty.hs  Syntax.hs  TypeChecker.hs
