cabal-version:       3.0
name:                taype
version:             0.0.0.0
synopsis:            A language for security-specification-agnostic oblivious computation with algebraic data types
description:
    A language for security-specification-agnostic oblivious computation with algebraic data types.
    See [README.md](https://github.com/ccyip/taype#Taype) for more details.
homepage:            https://github.com/ccyip/taype
bug-reports:         https://github.com/ccyip/taype/issues
license:             MIT
license-file:        LICENSE
author:              Qianchuan Ye
maintainer:          Qianchuan Ye <yeqianchuan@gmail.com>
copyright:           2022 Qianchuan Ye
category:            Language
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7
                     GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/ccyip/taype.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Taype
                       Taype.Prelude
                       Taype.NonEmpty
                       Taype.Common
                       Taype.Error
                       Taype.Name
                       Taype.Plate
                       Taype.Cute
                       Taype.Binder
                       Taype.Syntax
                       Taype.Environment
                       Taype.Lexer
                       Taype.Parser
                       Taype.TypeChecker
                       Oil.Syntax
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude
  build-depends:       base >= 4.14.3.0 && < 4.16
                     , relude
                     , bound
                     , prettyprinter
                     , megaparsec
                     , Earley
                     , parser-combinators
                     , optparse-applicative
                     , mtl
                     , lattices

executable taype
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , taype
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
