cabal-version:       3.0
name:                taype
version:             0.0.0.0
synopsis:            A language for security-specification-agnostic oblivious computation with algebraic data types
description:
    A language for security-specification-agnostic oblivious computation with algebraic data types.
    See [README.md](https://github.com/ccyip/taype#Taype) for more details.
homepage:            https://github.com/ccyip/taype
bug-reports:         https://github.com/ccyip/taype/issues
license:             MIT
license-file:        LICENSE
author:              Qianchuan Ye
maintainer:          Qianchuan Ye <yeqianchuan@gmail.com>
copyright:           2022-2023 Qianchuan Ye
category:            Language
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.7

source-repository head
  type:                git
  location:            https://github.com/ccyip/taype.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie

  default-language:    GHC2021

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Taype
                       Taype.Prelude
                       Taype.NonEmpty
                       Taype.Common
                       Taype.Error
                       Taype.Name
                       Taype.Plate
                       Taype.Cute
                       Taype.Binder
                       Taype.Syntax
                       Taype.Environment
                       Taype.Lexer
                       Taype.Parser
                       Taype.TypeChecker
                       Oil.Syntax
                       Oil.Translation
                       Oil.Optimization
                       Oil.ToOCaml
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude
  build-depends:       base >= 4.14.3.0 && < 4.18
                     , relude
                     , bound
                     , prettyprinter
                     , megaparsec
                     , Earley
                     , parser-combinators
                     , optparse-applicative
                     , mtl >= 2.3
                     , lattices
                     , containers
                     , filepath

executable taype
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , taype
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable runner
  import:              common-options
  hs-source-dirs:      app
  main-is:             Runner.hs
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude
  build-depends:       base >= 4.14.3.0 && < 4.18
                     , relude
                     , optparse-applicative
                     , vector
                     , cassava
                     , unliftio
                     , typed-process
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable shake
  import:              common-options
  hs-source-dirs:      app
  main-is:             Shake.hs
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude
  build-depends:       base >= 4.14.3.0 && < 4.18
                     , relude
                     , shake
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts=-N -I0 -qg"
