(library
 (name common)
 (modules common)
 (libraries prelude sexplib))

(library
 (name prelude)
 (modules prelude)
 (libraries driver))

(library
 (name driver)
 (modules driver)
 (flags (:standard -open Taype_driver_plaintext))
 (libraries taype-driver-plaintext))

(executable
 (name test)
 (modules test))
