(executables
 (names
   "test_elem"
   "test_insert"
   "test_hamming_distance"
   "test_dot_prod"
   "test_min_euclidean_distance"
   "test_nth"
   "test_map"
   "test_filter"
   "test_append"
   "test_take"
   "test_concat_map"
   "test_partition")
 (flags (:standard -w -27-33))
 (libraries taype-driver-plaintext-legacy common prelude sexplib))
